--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Digital Trend HTML Template</title>
+     <title>WebMe: Start your Digital Footprint!<title>
 <!--
 
 DIGITAL TREND
@@ -34,7 +34,7 @@ https://templatemo.com/tm-538-digital-trend
         <div class="container">
             <a class="navbar-brand" href="index.html">
               <i class="fa fa-line-chart"></i>
-              Digital Trend
+             Web Me 
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -70,11 +70,11 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                               <div class="hero-text">
 
-                                   <h1 class="text-white" data-aos="fade-up">We are ready for your digital marketing</h1>
+                                   <h1 class="text-white" data-aos="fade-up">Are you ready to digitalize yourself?</h1>
 
-                                   <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let us discuss together!</a>
+                                   <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let us empower your digital footprint!</a>
 
-                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-phone mr-2"></i> +99 080 070 4224</strong>
+				   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><a href="instagram.com/web.id/">@webme.id</a></strong>
                               </div>
                         </div>
 
